--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 }
 .logo{
     top: 0;
-    left: 0;
+    left: 30px;
     padding: 0;
     display: flex;
     position: fixed;
@@ -38,7 +38,7 @@ body {
     max-height: 150px;
     position: fixed;
     left: 70px;
-    top: 420px;
+    top: 410px;
 }
 
 
@@ -47,7 +47,7 @@ body {
 
     position: absolute;
 
-    width: 800px;
+    width: 850px;
     height: 420px;
 
     object-fit: cover;
@@ -75,13 +75,13 @@ body {
     justify-content: center;
     align-items: center;
     top: 200px;
-    left: 415px;
+    left: 600px;
 }
 
 .menu-lateral {
 	position: fixed;
 	top: 10px;
-	left: 600px;
+	left: 700px;
 	width: 20px;
     height: 80px;
 	display: flex;
@@ -98,10 +98,16 @@ body {
 
 .menu-lateral .icone {
 	width: 30px;
-	filter: invert(1);
+	/* filter: invert(1); */
 	transition: 0.4s ease-in-out;
 }
 
 .menu-lateral .icone:hover {
 	transform: scale(1.2);
+}
+
+.informacoes{
+    position: fixed;
+    top: 0;
+    left: 395px;
 }
